<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_logo"
        android:textSize="72sp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <Button
        android:id="@+id/btn_login_google"
        android:layout_marginTop="18dp"
        android:layout_width="200dp"
        android:onClick="loginByGoogle"
        android:drawablePadding="-8dp"
        android:layout_above="@+id/btn_login_email"
        android:drawableLeft="@drawable/google_color"
        android:drawableStart="@drawable/google_color"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:text="@string/google_login"/>

    <Button
        android:id="@+id/btn_login_email"
        android:layout_marginTop="6dp"
        android:layout_width="200dp"
        android:onClick="loginByEmail"
        android:drawablePadding="-8dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:drawableLeft="@drawable/ic_email"
        android:drawableStart="@drawable/ic_email"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:text="@string/email_login"/>

</RelativeLayout>